# simple-kfp-task-stub

./: LICENSE  pyproject.toml
simple_kfp_task/: task.py
