[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-kfp-task-stub"
version = "0.0.2"
authors = [
  { name="Sebastian Alberternst", email="sebastian.alberternst@dfki.de" },
]
description = "Generate a simple Kubeflow Pipeline task"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/salberternst/simple-kfp-task-stub"
Issues = "https://github.com/salberternst/simple-kfp-task-stub/issues"