[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "simple-kfp-task-stub"
dynamic = ["version"]
authors = [
  { name="Sebastian Alberternst", email="sebastian.alberternst@dfki.de" },
]
description = "Generate a simple Kubeflow Pipeline task"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/salberternst/simple-kfp-task-stub"
Issues = "https://github.com/salberternst/simple-kfp-task-stub/issues"
